<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView  
	    android:id="@+id/logdetail_top_header"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:textSize="22sp"
	    android:background="@color/drk_blue"
	    android:textColor="@color/alice_blue"
	    android:text="@string/logdetail_header"
	    />
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/logdetail_scroll_container"
		android:layout_width="fill_parent"
		android:layout_below="@id/logdetail_top_header"
		android:layout_height="wrap_content">
	    <TableLayout android:layout_width="fill_parent"
			android:id="@+id/logdetail_scroll"
			android:stretchColumns="*"
			android:layout_height="wrap_content">
			<TextView  
				android:id="@+id/logdetail_type_text"
				android:layout_width="wrap_content" 
				android:textSize="18sp"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:text="@string/type"
				android:textColor="@color/ice"
				/>
			<TextView  
				android:id="@+id/logdetail_type"
				android:layout_width="wrap_content" 
				android:textSize="18sp"
				android:layout_span="3"
				android:layout_height="wrap_content" 
				android:layout_weight="5"
				/>
			<TextView  
				android:id="@+id/logdetail_date_text"
				android:layout_width="wrap_content" 
				android:textSize="18sp"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:text="@string/date"
				android:textColor="@color/ice"
				/>
			<TextView  
				android:id="@+id/logdetail_date"
				android:layout_width="wrap_content" 
				android:textSize="18sp"
				android:layout_span="3"
				android:layout_height="wrap_content" 
				android:layout_weight="5"
				/>
			<TextView  
				android:id="@+id/logdetail_message_text"
				android:layout_width="wrap_content" 
				android:textSize="18sp"
				android:layout_height="wrap_content" 
				android:layout_weight="1"
				android:text="@string/message"
				android:textColor="@color/ice"
				/>
			<TextView  
				android:id="@+id/logdetail_message"
				android:layout_width="wrap_content" 
				android:textSize="18sp"
				android:layout_span="3"
				android:layout_height="wrap_content" 
				android:layout_weight="5"
				/>
                
	    </TableLayout>
	</ScrollView> 
	<Button
        android:id="@+id/logdetail_delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logdetail_back"
        android:text="@string/delete_entry" />
	<Button
        android:id="@id/logdetail_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/exit" />
</RelativeLayout>